<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:viewBindingIgnore="true"
        tools:openDrawer="start">

    <include
            android:id="@+id/app_bar_drawer"
            layout="@layout/app_bar_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_drawer"
            app:menu="@menu/activity_menu_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>