<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/post_fragment_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.sdpteam.connectout.utils.MyListView
        android:id="@+id/posts_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>