<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_registered_events_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.sdpteam.connectout.event.viewer.MyEventsCalendarActivity">

    <FrameLayout
            android:id="@+id/list_of_registered_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</RelativeLayout>